Misc fixes for dark mode

--- a/src/css/games/harmonies.less
+++ b/src/css/games/harmonies.less
@@ -1,5 +1,15 @@
 @import "./common";
 
+#cde-floating-menu-score>.sun-icon {
+	background: none !important;
+	font: normal normal normal 14px / 1 FontAwesome;
+	color: #f9a11a;
+}
+
+#cde-floating-menu-score>.sun-icon:before {
+	content: "\f005";
+}
+
 html[data-theme=dark].bgaext_bright {
 	#score #score-wrapper:before {
 		.reduceBrightness();
